<?xml version="1.0" encoding="utf-8"?>
<resources  xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation" >

    <string name="app_name">YFtpServer</string>
    <string name="hello_world">Hello world!</string>
    <string name="host_ip">Host IP:</string>
    <string name="listen_port">Listen Port:</string>
    <string name="user_name">User Name:</string>
    <string name="password">Password:</string>
    <string name="root_dir">root directory:</string>
    <string name="anonymous_access">Allow anonymous access:</string>
	<string name="ftp_start">Start</string>
	<string name="ftp_stop">Stop</string>
	<string name="ftp_start_fail">Can\'t start ftp server!</string>
	<string name="root_dir_empty">ftp root directory Can\'t be empty!</string>
	<string name="password_empty">user password Can\'t be empty!</string>
	<string name="user_empty">when deny anonymous access,user name Can\'t be empty!</string>
	<string name="wifi_enable">WIFI is disabled,Please enable it first!</string>
</resources>
